# crucible

./: .env.example  .env.prod.example  .gitignore  LICENSE  Makefile  OVERVIEW.md  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  serialize.py  sqlutil.py  sse.py
apps/api/app/api/routers/: arena.py  auth.py  benchmarks.py  keys.py  leaderboard.py  models.py  observability.py  reviews.py  runs.py  safety.py
apps/api/app/arena/: __init__.py  battle.py  prompts.py  rating.py  service.py  tournament.py
apps/api/app/core/: config.py  db.py  security.py
apps/api/app/engine/: __init__.py  dispatch.py  events.py  runner.py
apps/api/app/models/: __init__.py
apps/api/app/observability/: __init__.py  cost.py
apps/api/app/providers/: __init__.py  anthropic.py  base.py  google.py  mock.py  openai_compat.py  registry.py
apps/api/app/safety/: __init__.py  probes.py  redteam.py  refusal.py  runner.py
apps/api/app/scoring/: __init__.py  base.py  code_exec.py  judge.py  llm_scorer.py  rule_based.py
apps/api/app/seeds/: catalog.py  demo.py  seed.py
apps/api/app/seeds/data/: business_knowledge.json  business_strategy.json  code_algorithms.json  code_output_prediction.json  cognitive_biases.json  emotional_intelligence.json  empathy_support.json  finance_concepts.json  finance_numeric.json  general_knowledge.json  logic_deduction.json  logic_gsm8k_lite.json  (+6 more)
apps/api/app/worker/: arq_worker.py
apps/api/tests/: conftest.py  test_core.py  test_runner.py
(+49 files in other folders)
