[project]
name = "crucible-api"
version = "0.1.0"
description = "Crucible — SOTA multi-model LLM benchmarking, red-team & arena platform (API)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic[email]>=2.7",
    "email-validator>=2.1",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "cryptography>=42.0",
    "pyjwt>=2.8",
    "numpy>=1.26",
    "jinja2>=3.1",
    "arq>=0.26",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Optional: fetch full benchmark datasets at runtime from HuggingFace.
datasets = [
    "datasets>=2.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
